[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/Controller/Run_Jump04.png" type="Texture" id=1]
[ext_resource path="res://Textures/Controller/Run_Jump03.png" type="Texture" id=2]
[ext_resource path="res://Textures/Controller/AnalogButton01.png" type="Texture" id=3]
[ext_resource path="res://Textures/Controller/AnalogButton02.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Controller.gd" type="Script" id=5]

[node name="Controller" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Controller" type="Control" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 5 )

[node name="AnalogBase" type="TextureRect" parent="CanvasLayer/Controller"]
margin_left = 42.0
margin_top = 339.0
margin_right = 82.0
margin_bottom = 379.0
rect_scale = Vector2( 6.44541, 5.8032 )
texture = ExtResource( 3 )

[node name="AnalogHandle" type="TextureRect" parent="CanvasLayer/Controller/AnalogBase"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="JumpButton" type="TouchScreenButton" parent="CanvasLayer/Controller"]
position = Vector2( 755, 356 )
scale = Vector2( 6.25825, 5.6204 )
normal = ExtResource( 2 )
pressed = ExtResource( 1 )
action = "jump"
